--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "asposetaskscloud",
+  "name": "aspose-tasks-cloud",
   "version": "19.10.0",
   "description": "Aspose.Tasks Cloud SDK for Node.js",
   "main": "src/api.ts",
   "scripts": {
-    "test": "mocha -r ts-node/register test/**/*.ts --timeout 10000"
+    "test": "mocha -r ts-node/register test/**/*.ts --no-timeouts"
   },
   "keywords": [
     "Aspose",
     "Cloud",
-    "Tasks"
+    "Tasks",
+    "mpp",
+    "primavera",
+    "microsoft",
+    "project"
   ],
   "author": {
     "name": "Ivan Andreychikov"
