[N/A] - Added .npmignore file.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "aspose-tasks-cloud",
+  "name": "@asposecloud/aspose-tasks-cloud",
   "version": "19.10.0",
   "description": "Aspose.Tasks Cloud SDK for Node.js",
-  "main": "src/api.ts",
+  "homepage": "https://products.aspose.cloud/tasks",
+  "readmeFilename": "README.md",
+  "main": "dist/src/api.js",
+  "types": "dist/src/api.d.ts",
   "scripts": {
-    "test": "mocha -r ts-node/register test/**/*.ts --no-timeouts"
+    "test": "mocha -r ts-node/register test/**/*.ts --no-timeouts",
+    "compile": "tsc --build tsconfig.json"
   },
+  "files": [
+    "dist/src"
+  ],
   "keywords": [
     "Aspose",
     "Cloud",
@@ -23,6 +30,9 @@
     "url": "https://github.com/aspose-tasks-cloud/aspose-tasks-cloud-node.git"
   },
   "license": "MIT",
+  "engines": {
+    "node": ">=6.15"
+  },
   "devDependencies": {
     "request-debug": "^0.2.0",
     "typescript": "^3.6.3"
