--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asposecloud/aspose-tasks-cloud",
-  "version": "21.2.0",
+  "version": "21.8.0",
   "description": "Aspose.Tasks Cloud SDK for Node.js",
   "homepage": "https://products.aspose.cloud/tasks",
   "readmeFilename": "README.md",
@@ -31,17 +31,17 @@
     "node": ">=6.15"
   },
   "devDependencies": {
-    "request-debug": "^0.2.0",
-    "typescript": "^3.6.3"
-  },
-  "dependencies": {
     "@types/chai": "^4.2.3",
     "@types/mocha": "^7.0.2",
     "@types/request": "^2.48.3",
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
-    "request": "^2.88.0",
-    "superagent": "^3.8.3",
+    "typescript": "^3.6.3",
+    "request-debug": "^0.2.0",
     "ts-node": "^8.4.1"
+  },
+  "dependencies": {
+    "request": "^2.88.0",
+    "superagent": "^3.8.3"
   }
 }
