--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.3",
-    "@types/mocha": "^7.0.2",
+    "@types/mocha": "^9.1.1",
     "@types/request": "^2.48.3",
     "chai": "^4.2.0",
-    "mocha": "^7.1.1",
-    "typescript": "^3.6.3",
+    "mocha": "^10.0.0",
     "request-debug": "^0.2.0",
-    "ts-node": "^8.4.1"
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.3"
   },
   "dependencies": {
     "request": "^2.88.0",
