--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@asposecloud/aspose-tasks-cloud",
-  "version": "22.7.0",
+  "version": "22.8.0",
   "description": "Aspose.Tasks Cloud SDK for Node.js",
   "homepage": "https://products.aspose.cloud/tasks",
   "readmeFilename": "README.md",
-  "main": "dist/src/api.js",
-  "types": "dist/src/api.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.ts --no-timeouts",
     "compile": "tsc --build tsconfig.json"
